--- a/Javascript/BMI Calculator/style.css
+++ b/Javascript/BMI Calculator/style.css
@@ -35,6 +35,10 @@ input[type="submit"] {
     width:100%;
 }
 
+label {
+    font-weight: bold;
+}
+
 .result {
     border-radius: 20px;
     margin-bottom:10px;
